Bug 70747 - igt/ZZ_missed_irq causes [drm:i915_hangcheck_elapsed] *ERROR* Hangcheck timer elapsed... render ring idle
Summary: igt/ZZ_missed_irq causes [drm:i915_hangcheck_elapsed] *ERROR* Hangcheck timer...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-22 05:59 UTC by lu hua
Modified: 2017-10-06 14:42 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (100.81 KB, text/plain)
2013-10-22 05:59 UTC, lu hua
no flags Details
handle fake missed interrupts as a simulated hang, too (964 bytes, patch)
2013-10-22 08:44 UTC, Daniel Vetter
no flags Details | Splinter Review
patch v2 (1.41 KB, patch)
2013-10-27 18:48 UTC, Daniel Vetter
no flags Details | Splinter Review
dmesg with patch v2 (94.96 KB, text/plain)
2013-10-28 08:04 UTC, lu hua
no flags Details

Description lu hua 2013-10-22 05:59:51 UTC
Created attachment 87966 [details]
dmesg

System Environment:
--------------------------
Platform:  PNV/ILK/SNB/IVB/HSW
Kernel:	(drm-intel-nightly)d1b2b826f0969182f055d11c991f90fdc6a4924a

Bug detailed description:
---------------------------
It causes [drm:i915_hangcheck_elapsed] *ERROR* Hangcheck timer elapsed... render ring idle on PNV/ILK/SNB/IVB/HSW with -nightly and -queued kernel. -fixes kernel doesn't support interrupt masking. It's a new case.

output:
.
Interrupts masked
Interrupts unmasked
Cleared missed interrupts

no error state collected in debug/dri/0/i915_error_state.

Reproduce steps:
----------------------------
1. ./ZZ_missed_irq
Comment 1 Daniel Vetter 2013-10-22 08:17:47 UTC
This is expected, this testcase exercises a special case in our hangcheck code. I guess we need to add a "simulated gpu hang" notice like for ZZ_hangman and friends ...
Comment 2 Daniel Vetter 2013-10-22 08:44:31 UTC
Created attachment 87973 [details] [review]
handle fake missed interrupts as a simulated hang, too

With this patch we should properly mark the simulated hangs caused by ZZ_missed_irqs as such with the usual "Simulated gpu hang, resetting stop_rings" dmesg output. Please test.
Comment 3 Chris Wilson 2013-10-22 08:58:43 UTC
We don't call reset, this error is from hangcheck itself. Part of this test is that we do indeed emit an *ERROR* for a missed irq. It would be easier if we can test the test runners about expected *ERROR*.
Comment 4 lu hua 2013-10-25 05:04:24 UTC
(In reply to comment #2)
> Created attachment 87973 [details] [review] [review]
> handle fake missed interrupts as a simulated hang, too
> 
> With this patch we should properly mark the simulated hangs caused by
> ZZ_missed_irqs as such with the usual "Simulated gpu hang, resetting
> stop_rings" dmesg output. Please test.

Test this patch, "Simulated gpu hang, resetting stop_rings" doesn't appear in dmesg.

dmesg:
[   66.702045] [drm:i915_hangcheck_elapsed] *ERROR* Hangcheck timer elapsed... bsd ring idle
[   70.709623] [drm:i915_hangcheck_elapsed] *ERROR* Hangcheck timer elapsed... render ring idle
Comment 5 Daniel Vetter 2013-10-27 18:48:08 UTC
Created attachment 88192 [details] [review]
patch v2

This one here should work better at quieting the ERROR in dmesg for faked missed interrupts. Please test.
Comment 6 lu hua 2013-10-28 08:03:53 UTC
(In reply to comment #5)
> Created attachment 88192 [details] [review] [review]
> patch v2
> 
> This one here should work better at quieting the ERROR in dmesg for faked
> missed interrupts. Please test.

Test this patch, The "ERROR" goes away.
Comment 7 lu hua 2013-10-28 08:04:19 UTC
Created attachment 88209 [details]
dmesg with patch v2
Comment 8 Daniel Vetter 2013-10-30 09:36:28 UTC
commit f4adcd247766e5b914f861ed143ff328f869bf80
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Mon Oct 28 09:24:13 2013 +0100

    drm/i915: handle faked missed interrupts as simulated hangs, too
Comment 9 lu hua 2013-10-31 07:26:05 UTC
Verified.Fixed.
Comment 10 Elizabeth 2017-10-06 14:42:29 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.